@@ -13,7 +13,6 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.LinkedBlockingQueue;
 import java.util.concurrent.ThreadPoolExecutor;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 
 import org.osgi.service.component.annotations.Activate;
 import org.osgi.service.component.annotations.Component;
@@ -197,7 +196,7 @@ public class OdooMetadata extends AbstractMetadata implements Metadata, Mailer, 
 
 	@Override
 	public Collection<Edge> getAllOfflineEdges() {
-		return this.edgeCache.getAllEdges().stream().filter(Edge::isOffline).collect(Collectors.toList());
+		return this.edgeCache.getAllEdges().stream().filter(Edge::isOffline).toList();
 	}
 
 	/**
